fix: env variables for db configs with complete connection string

--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,14 @@
-port:
+serverPort: 8001
 
-oauthStateString:
+oauthStateString: ""
 google:
-  clientID:
-  clientSecret:
+  clientID: ""
+  clientSecret: ""
 
 db:
+  host: ""
+  dbPort: ""
   user: ""
   password: ""
-  dbName: ""
-  sslMode: ""
+  dbname: ""
+  sslmode: ""
